# sparometer

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac  msparometer  sparometer.c
